[workspace]
members = ["error-code", "error-code-derive"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1"
error-code = { path = "./error-code" }
error-code-derive = { path = "./error-code-derive" }
http = "1"
thiserror = "1"
